Rename package h/t to @mdsumner

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# voidev
+# devoid
 
 This package provides a graphic device that does no operations. This makes it 
 suitable for benchmarking functions that produce graphics as it removes the
@@ -24,21 +24,21 @@ calling `pdf()` with a temporary file connection.
 
 ## Installation
 
-You can install `voidev` with the remotes package:
+You can install `devoid` with the remotes package:
 
 ```{r, eval=FALSE}
 # install.packages('remotes')
-remotes::install_github('r-lib/voidev')
+remotes::install_github('r-lib/devoid')
 ```
 
 
 ## Example
 
-`voidev` provides a single function `void_dev()` which is used much like any 
+`devoid` provides a single function `void_dev()` which is used much like any 
 other device:
 
 ```{r example}
-library(voidev)
+library(devoid)
 
 void_dev()
 plot(1:10, 1:10)
@@ -63,7 +63,7 @@ png_plot <- function() {
   NULL
 }
 
-res <- bench::mark(voidev = void_plot(), png = png_plot(), min_iterations = 50)
+res <- bench::mark(devoid = void_plot(), png = png_plot(), min_iterations = 50)
 plot(res)
 ```
 
