--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,10 @@ knitr::opts_chunk$set(
 
 # devoid
 
+<!-- badges: start -->
+[![R build status](https://github.com/r-lib/devoid/workflows/R-CMD-check/badge.svg)](https://github.com/r-lib/devoid/actions)
+<!-- badges: end -->
+  
 This package provides a graphic device that does no operations. This makes it 
 suitable for benchmarking functions that produce graphics as it removes the
 device implementation from the equation. In contrast to the `nulldev()` function
